# myslam

./: CMakeLists.txt  README.md  package.xml
include/: Convert.h  Edge.h  EdgeReprojectionPoseOnly.h  EdgeReprojectionXYZ.h  Frame.h  Optimizer.h  ProblemSolver.h  Vertex.h  VertexPose.h  VertexXYZ.h  VisualOdom.h  debug.h
note/: BA优化——基于Eigen.md  Bug小记.md  Eigen.md  OpenCV实现PnP.md  OpenCV实现特征点提取匹配.md  tf树的发布.md  杂项.md
rviz/: init.rviz
scripts/: run.sh
src/: Convert.cpp  Edge.cpp  EdgeReprojectionPoseOnly.cpp  EdgeReprojectionXYZ.cpp  Frame.cpp  Optimizer.cpp  ProblemSolver.cpp  Vertex.cpp  VertexPose.cpp  VisualOdom.cpp  rgbd_tum.cpp  testLMmain.cpp  test_P3P.cpp
